<resources>
    <string name="app_name">uSpend</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="title_activity_hamburger_menu">HamburgerMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_overview">Overview</string>
    <string name="title_wishlist">Wishlist</string>
    <string name="title_assistant">Assistant</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_add" />
    <string name="title_transaction">Transaction</string>
    <string name="holder_email_com">holder@email.com</string>
    <string name="account_holder">Account Holder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Familly group page</string>
    <string name="title_activity_familly_group">FamillyGroupActivity</string>
    <string name="family_group">Family Group</string>
    <string name="recuring_payments">Recuring Payments</string>
    <string name="expenses_categories">Expenses Categories</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="add_expense">Add Expense</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="manual_insertion">Manual Insertion</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="group_prompt">Choose target person</string>
    <string-array name="group_arrays">
        <item>Choose target group</item>
        <item>Personal</item>
        <item>Group</item>

    </string-array>
    <string name="pick_date">Pick Date</string>
    <string name="category_prompt">Choose category</string>
    <string-array name="category_arrays">
        <item>Choose category</item>
        <item>Food</item>
        <item>House</item>
        <item>Personal Car</item>
        <item>Children</item>
        <item>Public Transport</item>
        <item>Vacation</item>
    </string-array>
    <string-array name="family_group_roles">
        <item>Regular</item>
        <item>Regular</item>
        <item>Administrator</item>
        <item>Child</item>
    </string-array>

    <string-array name="expenses_repeat">
        <item>No</item>
        <item>Every day</item>
        <item>Every month</item>
    </string-array>
    <string-array name="expense_categories">
        <item>Category 1</item>
        <item>Category 2</item>
        <item>Category 3</item>
    </string-array>

    <string name="assistant">Enable personal assistant</string>
    <string name="add_a_new_expense">Add a new expense</string>
    <string-array name="priority_arrays">
        <item>Choose priority</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="timespan_arrays">
        <item>Monthly</item>
        <item>Annually</item>
        <item>Weekly</item>
    </string-array>
</resources>
