<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addExpenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/add_expense" />

    <Button
        android:layout_width="160dp"
        android:text="@string/scan_receipt"
        android:id="@+id/scan_receipt"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="160dp"
        android:text="@string/scan_barcode"
        android:id="@+id/scan_barcode"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="160dp"
        android:text="@string/manual_insertion"
        android:id="@+id/manual_insertion"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel_adding_expense"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />
</LinearLayout>