<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.Dark.Dialog"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:id="@+id/new_expense_description"
            app:backgroundTint="@color/colorPrimaryDark"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:id="@+id/new_expense_price"
            android:inputType="numberDecimal"
            />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/new_expense_category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:entries="@array/category_arrays">
    </Spinner>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/new_expense_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:onClick="onExpenseAdded"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/new_expense_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onPopupCancel"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"/>

</LinearLayout>