<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uid.team5.project.add_expenses.ManualAdditionActivity"
    android:theme="@style/AppTheme.Dark"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ListView
        android:id="@+id/expense_list"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:padding="5dp"
        android:transcriptMode="alwaysScroll" />

    <Button
        android:text="@string/add_expense"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:onClick="onAddExpense"/>

    <Button
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:onClick="onConfirm"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:onClick="onCancel"/>
</LinearLayout>
